--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "bip39": "^3.0.4",
     "bootstrap": "^5.0.1",
+    "ec-key": "0.0.4",
     "ethereum-blockies-base64": "^1.0.2",
     "json-bigint": "^1.0.0",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-scripts": "4.0.3",
     "react-timestamp": "^5.1.0",
+    "serve": "^12.0.0",
     "sjcl": "^1.0.8",
     "use-state-with-callback": "^2.0.3",
     "web-vitals": "^1.0.1"
@@ -41,9 +43,14 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "Opera 39",
+      "Edge 14",
+      "Firefox 52",
+      "Safari 10.1",
+      "Node 7",
+      "ios 10.3",
+      "Electron 1.3",
+      "Chrome 52"
     ],
     "development": [
       "last 1 chrome version",
