--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-timestamp": "^5.1.0",
     "sjcl": "^1.0.8",
     "starkbank-ecdsa": "^1.1.2",
+    "use-file-picker": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
