--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@toruslabs/openlogin": "^0.9.0",
     "axios": "^0.21.1",
     "bigint-conversion": "^2.1.12",
     "bip39": "^3.0.4",
