Add stoic connect

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "bip39": "^3.0.4",
     "ethereum-blockies-base64": "^1.0.2",
     "json-bigint": "^1.0.0",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-timestamp": "^5.1.0",
     "sjcl": "^1.0.8",
