--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@toniq-labs/fleek-iterative-deploy": "1.2.11",
     "@toruslabs/openlogin": "^0.9.0",
     "axios": "^0.21.1",
     "bigint-conversion": "^2.1.12",
@@ -38,7 +39,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "echo \"*\" > .eslintignore; react-app-rewired build",
     "test": "react-app-rewired test",
     "serve": "react-app-rewired build && serve -s build",
     "eject": "react-app-rewired eject"
