--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @psychedelic:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=PAT
