--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "prebuild": "",
+    "prebuild": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
