--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @psychedelic:registry=https://npm.pkg.github.com
-# //npm.pkg.github.com/:_authToken=${PAT}
 //npm.pkg.github.com/:_authToken=${PAT}
+# //npm.pkg.github.com/:_authToken=$PAT
