--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "patch-package": "^6.4.7",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "webpack": "^5.88.2"
   },
   "browser": {
     "crypto": false
