--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "prebuild": "patch-package",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "start": "react-app-rewired start",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
